--- a/SmartMove/app/src/main/AndroidManifest.xml
+++ b/SmartMove/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartMove"
         tools:targetApi="31">
-        <activity android:name=".BootstrapActivity" android:exported="true">
+        <activity android:name=".BootstrapActivity" android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -26,7 +26,8 @@
         </activity>
         <activity
             android:name=".DashboardActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.SmartMove.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -34,7 +35,7 @@
         <activity
             android:name=".ScrollingActivity"
             android:exported="true"
-            android:theme="@style/Theme.GCU1.NoActionBar">
+            android:theme="@style/Theme.SmartMove.NoActionBar">
 
             <meta-data
                 android:name="android.app.lib_name"
