--- a/SmartMove/app/src/main/AndroidManifest.xml
+++ b/SmartMove/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartMove"
+        android:name=".App"
         tools:targetApi="31">
         <activity
-            android:name=".activitycarbonEquivalent"
+            android:name=".activityCarbonEquivalent"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
