ajout de constructeurs dans user et d'une classe de test

--- a/SmartMove/app/build.gradle
+++ b/SmartMove/app/build.gradle
@@ -42,7 +42,12 @@ dependencies {
     implementation files('Libs/commons-net-3.6.jar')
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
+    implementation 'org.testng:testng:6.9.6'
+    implementation 'junit:junit:4.12'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
