--- a/SmartMove/app/src/main/AndroidManifest.xml
+++ b/SmartMove/app/src/main/AndroidManifest.xml
@@ -19,6 +19,18 @@
         android:theme="@style/Theme.SmartMove"
         tools:targetApi="31">
         <activity
+            android:name=".debugus4.DebugUS4"
+            android:exported="false"
+            android:label="@string/title_activity_debug_us4"
+            android:theme="@style/Theme.SmartMove.NoActionBar">
+
+
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.ActivityCarbonEquivalent"
             android:exported="false">
             <meta-data
@@ -33,7 +45,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
