--- a/SmartMove/app/build.gradle
+++ b/SmartMove/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'junit:junit:4.13.2'
     implementation 'org.testng:testng:6.9.6'
+    implementation fileTree(dir: '/Users/maeltudal/Library/Android/sdk/platforms/android-33', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -52,4 +53,17 @@ dependencies {
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 
     implementation 'org.osmdroid:osmdroid-android:6.1.14'
+
+}
+task createJavadocs (type: Javadoc)
+{
+    source = project.android.sourceSets.main.java.srcDirs
+    exclude "**/*.kt"
+    exclude "**/R"
+    exclude "**/R.**"
+    exclude "**/R\$**"
+    exclude "**/BuildConfig*"
+    options.linkSource true
+    classpath += project.files(project.android.getBootClasspath().join(File.pathSeparator))
+    failOnError false
 }
